[package]
name = "keyexchg"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strum = "0.19"
strum_macros = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1.0.91"
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.1"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
log = "0.4.17"
wasm-bindgen-futures = "0.4"
implicit-clone = "0.3.5"
gloo = "0.8.0"
gloo-storage = "0.2.2"
gloo-net = "0.2.6"
chrono = "0.4.26"
once_cell = "1.18.0"
clap = {version="4.4.7",features=["derive"]}
rand = "0.8.5"
rand_core={version="0.6.4",features=["getrandom"]}
x25519-dalek = {version="2",features=["static_secrets"]}
base64="0.22.0"
url = "2.5.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlBodyElement',
  'HtmlButtonElement',
  'EventTarget',
  'Node',
  'Window',
  'DomTokenList'
]
